--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@walletconnect/sign-client": "^2.11.0",
+    "@walletconnect/sign-client": "2.11.0",
     "cors": "^2.8.5",
     "express": "^4.19.2"
   }
