--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "@walletconnect/sign-client": "2.11.0",
     "cors": "^2.8.5",
     "express": "^4.19.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
