--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "wc-login-demo",
   "version": "1.0.0",
   "type": "module",
-  "private": true,
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@walletconnect/sign-client": "^2.11.2",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "uuid": "^9.0.1"
+    "@walletconnect/sign-client": "2.14.1",
+    "cors": "2.8.5",
+    "express": "4.19.2",
+    "qrcode": "1.5.3"
   }
 }
