--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "wc-login-demo",
   "version": "1.0.0",
   "type": "module",
-  "engines": {
-    "node": "20.x"
-  },
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@walletconnect/sign-client": "2.11.2",
+    "@walletconnect/sign-client": "^2.11.2",
     "cors": "2.8.5",
     "express": "4.19.2",
     "qrcode": "1.5.3"
