--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "wc-login-demo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
+  "private": true,
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">=18.18"
+  },
   "dependencies": {
-    "@walletconnect/universal-provider": "^2.11.2",
-    "cors": "2.8.5",
-    "express": "4.19.2",
-    "qrcode": "1.5.3"
+    "@walletconnect/sign-client": "^2.11.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "uuid": "^9.0.1"
   }
 }
